--- a/options.html
+++ b/options.html
@@ -1,10 +1,25 @@
+<!doctype html>
+<html lang="pt-BR">
 
-<!doctype html><html lang="pt-BR"><head>
-<meta charset="utf-8"/><title>Bastter Lite - Opções</title>
-</head><body>
-<h1>⚙️ Bastter Lite — Opções</h1>
-<textarea id="selectors"></textarea><br>
-<label><input type="checkbox" id="disabled"/> Desativar limpeza</label><br>
-<button id="save">Salvar</button><span id="status"></span>
-<script src="options.js"></script>
-</body></html>
+<head>
+    <meta charset="utf-8" />
+    <title>Bastter Lite - Opções</title>
+</head>
+
+<body>
+    <h1>⚙️ Bastter Lite — Opções</h1>
+    <textarea id="selectors"></textarea><br>
+    <label><input type="checkbox" id="disabled" /> Desativar limpeza</label><br>
+
+    <label>
+        <input id="blite-dark" type="checkbox">
+        Habilitar tema escuro
+    </label>
+    <script src="options.js"></script>
+      
+
+    <button id="save">Salvar</button><span id="status"></span>
+    <script src="options.js"></script>
+</body>
+
+</html>
